增加垃圾收集器笔记